RGB Curves Mouse Pointer Problem #32609

Closed
opened 2012-09-20 17:59:14 +02:00 by Tobias Lijsen · 3 comments

%%%Hey Guys,
i noticed a problem with setting the RBG-Curves in Compositor and in VSE

if you drag the curve and leave it your mouse is jumping back to the position where you started draging the curvepoint.
then you see the effect of your coloroperation and want to change again.
now - because the mousepointer has jumped back to startposition, you have to locate it visualy to drag the point again.

in past you just have to click again and move it.

is it possible to change it back to its old (better) behaviour ?

that would be great for better handling

thanks
Tobi

PS: i used RC1 2.64 64bit win%%%

%%%Hey Guys, i noticed a problem with setting the RBG-Curves in Compositor and in VSE if you drag the curve and leave it your mouse is jumping back to the position where you started draging the curvepoint. then you see the effect of your coloroperation and want to change again. now - because the mousepointer has jumped back to startposition, you have to locate it visualy to drag the point again. in past you just have to click again and move it. is it possible to change it back to its old (better) behaviour ? that would be great for better handling thanks Tobi PS: i used RC1 2.64 64bit win%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Seems this has been already fixed in svn rev50810. At least mouse works predictable in current trunk.

Please let me know if it's still gives issues in some cases, until then closing the report. %%%

%%%Seems this has been already fixed in svn rev50810. At least mouse works predictable in current trunk. Please let me know if it's still gives issues in some cases, until then closing the report. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32609
No description provided.