fix [#32609] RGB Curves Mouse Pointer Problem

this was working as intended but users complained that the mouse cursor stayed in the same location after using the color picker and curves with continuous grab enabled.