source/blender/editors/interface/interface.c
@@ -2619,6 +2619,9 @@ static uiBut *ui_def_but(uiBlock *block, int type, int retval, const char *str,
 	uiBut *but;
 	int slen;
 
+	BLI_assert(width >= 0);
+	BLI_assert(height >= 0);
+
 	/* we could do some more error checks here */
 	if ((type & BUTTYPE) == LABEL) {
 		BLI_assert((poin != NULL || min != 0.0f || max != 0.0f || (a1 == 0.0f && a2 != 0.0f) || (a1 != 0.0f && a1 != 1.0f)) == FALSE);
